# KnowledgeHasNoLimit

./: .gitignore  main.go
AI_Large_Model_Expert_Practical_Course/: 08_housing.py  08_housing_data.csv  08_linear_regression.py  08_logistic_regression.py  09_decision_tree.py  09_plot_neural_network.py  09_random_forest.py  09_svc.py  10_rnn.py  11_BoW.py  11_text_preprocessing.py  11_word_embeddings.py  12_valid.tsv  12_word2vec.py  13_seq2seq.py  14_attention.py  README
BlockChain/: .env  README.md  blockchain.go  main.go  tcp.go  web.go
GoCache/: Cache.go  CacheItem.go  CacheTable.go  Errors.go  README.md  cache_test.go
Memcache-go/: README  main.go
changbacron/: go.mod  go.sum  main.go  test.go
enio-demo/: agent_todoapp.go  chat_temp.go  go.mod  go.sum
geedemo/: README.md  go.mod  main.go
go-svc/: README.md  go.mod  svc.go  svc_common.go  svc_common_test.go  svc_test.go
nsq/nsqd/: nsqd.go  (+11 more)
xingyunyang01_geek02/jobsearch-mcp-server/: .env  pyproject.toml
xingyunyang01_geek02/jobsearch-mcp-server/.roo/: mcp.json
xingyunyang01_geek02/jobsearch-mcp-server/src/jobsearch_mcp_server/: job.txt  server.py  zhangsan_resume.docx
xingyunyang01_geek02/jobsearch-mcp-server/src/jobsearch_mcp_server/llm/: llm.py
xingyunyang01_geek02/jobsearch-mcp-server/src/jobsearch_mcp_server/prompt/: prompt.py
xingyunyang01_geek02/jobsearch-mcp-server/src/jobsearch_mcp_server/selenium/: listjob.py
xingyunyang01_geek02/jobsearch-mcp-server/src/jobsearch_mcp_server/tools/: job.py  resume.py
xingyunyang01_geek02/jobsearch-mcp-server/src/jobsearch_mcp_server/word/: word.py
(+220 files in other folders)
